--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <lombok.version>1.16.20</lombok.version>
         <log4j.version>2.11.2</log4j.version>
         <assertj.version>3.12.2</assertj.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
+        <junit-jupiter.version>5.5.1</junit-jupiter.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
@@ -23,7 +26,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.5.1</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -49,14 +52,14 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.9</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
+            <version>${commons-collections4.version}</version>
         </dependency>
-
 
     </dependencies>
 
