--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <properties>
+                        <configurationParameters>
+                            junit.jupiter.execution.parallel.enabled=true
+                            junit.jupiter.execution.parallel.config.fixed.parallelism=4
+                            junit.jupiter.execution.parallel.mode.default=concurrent
+                            junit.jupiter.execution.parallel.mode.classes.default=concurrent
+                        </configurationParameters>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
